--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "homepage": "https://Nearh777.github.io/goit-react-hw-07-phonebook/",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
+    "@mui/styled-engine": "^5.13.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
